# review-service/internal/data/model/appeals.gen.go
@@ -1,0 +1,42 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
+
+const TableNameAppeal = "appeals"
+
+// Appeal mapped from table <appeals>
+type Appeal struct {
+	ID          int64          `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
+	CreatedAt   time.Time      `gorm:"column:created_at;not null;default:CURRENT_TIMESTAMP" json:"created_at"`
+	UpdatedAt   time.Time      `gorm:"column:updated_at;not null;default:CURRENT_TIMESTAMP" json:"updated_at"`
+	CreatedBy   int64          `gorm:"column:created_by;not null;comment:User ID" json:"created_by"`      // User ID
+	UpdatedBy   int64          `gorm:"column:updated_by;not null;comment:User ID" json:"updated_by"`      // User ID
+	Version     int32          `gorm:"column:version;not null;comment:Optimistic locking" json:"version"` // Optimistic locking
+	DeletedAt   gorm.DeletedAt `gorm:"column:deleted_at;comment:Soft delete" json:"deleted_at"`           // Soft delete
+	AppealID    int64          `gorm:"column:appeal_id;not null" json:"appeal_id"`
+	ReviewID    int64          `gorm:"column:review_id;not null" json:"review_id"`
+	Reason      string         `gorm:"column:reason;not null;comment:Appeal reason" json:"reason"`    // Appeal reason
+	Content     string         `gorm:"column:content;not null;comment:Appeal content" json:"content"` // Appeal content
+	SellerID    int64          `gorm:"column:seller_id;not null" json:"seller_id"`
+	Pictures    string         `gorm:"column:pictures;not null;default:[];comment:Appeal pictures" json:"pictures"` // Appeal pictures
+	Videos      string         `gorm:"column:videos;not null;default:[];comment:Appeal videos" json:"videos"`       // Appeal videos
+	Status      string         `gorm:"column:status;not null;default:PENDING" json:"status"`
+	OpNote      *string        `gorm:"column:op_note;comment:Operator note" json:"op_note"`                               // Operator note
+	OpProcessAt *time.Time     `gorm:"column:op_process_at;comment:Operator process time" json:"op_process_at"`           // Operator process time
+	OpProcessBy *int64         `gorm:"column:op_process_by;comment:Operator process user ID" json:"op_process_by"`        // Operator process user ID
+	ExtJSON     string         `gorm:"column:ext_json;not null;default:{};comment:Extended information" json:"ext_json"`  // Extended information
+	CtrlJSON    string         `gorm:"column:ctrl_json;not null;default:{};comment:Control information" json:"ctrl_json"` // Control information
+}
+
+// TableName Appeal's table name
+func (*Appeal) TableName() string {
+	return TableNameAppeal
+}
