# review-service/internal/data/model/reviews.gen.go
@@ -1,0 +1,54 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
+
+const TableNameReview = "reviews"
+
+// Review mapped from table <reviews>
+type Review struct {
+	ID             int64          `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
+	CreatedAt      time.Time      `gorm:"column:created_at;not null;default:CURRENT_TIMESTAMP" json:"created_at"`
+	UpdatedAt      time.Time      `gorm:"column:updated_at;not null;default:CURRENT_TIMESTAMP" json:"updated_at"`
+	CreatedBy      int64          `gorm:"column:created_by;not null;comment:User ID" json:"created_by"`      // User ID
+	UpdatedBy      int64          `gorm:"column:updated_by;not null;comment:User ID" json:"updated_by"`      // User ID
+	Version        int32          `gorm:"column:version;not null;comment:Optimistic locking" json:"version"` // Optimistic locking
+	DeletedAt      gorm.DeletedAt `gorm:"column:deleted_at;comment:Soft delete" json:"deleted_at"`           // Soft delete
+	ReviewID       int64          `gorm:"column:review_id;not null" json:"review_id"`
+	Content        string         `gorm:"column:content;not null" json:"content"`
+	Rating         int32          `gorm:"column:rating;not null;comment:Overall rating" json:"rating"`                        // Overall rating
+	ServiceRating  int32          `gorm:"column:service_rating;not null;comment:Seller service rating" json:"service_rating"` // Seller service rating
+	DeliveryRating int32          `gorm:"column:delivery_rating;not null;comment:Delivery rating" json:"delivery_rating"`     // Delivery rating
+	HasMedia       bool           `gorm:"column:has_media;not null" json:"has_media"`
+	Pictures       string         `gorm:"column:pictures;not null;default:[];comment:Review pictures" json:"pictures"` // Review pictures
+	Videos         string         `gorm:"column:videos;not null;default:[];comment:Review videos" json:"videos"`       // Review videos
+	OrderID        int64          `gorm:"column:order_id;not null" json:"order_id"`
+	SkuID          int64          `gorm:"column:sku_id;not null" json:"sku_id"`
+	SpuID          int64          `gorm:"column:spu_id;not null" json:"spu_id"`
+	SellerID       int64          `gorm:"column:seller_id;not null" json:"seller_id"`
+	BuyerID        int64          `gorm:"column:buyer_id;not null" json:"buyer_id"`
+	IsAnonymous    bool           `gorm:"column:is_anonymous;not null" json:"is_anonymous"`
+	Status         string         `gorm:"column:status;not null;default:PENDING" json:"status"`
+	Tags           string         `gorm:"column:tags;not null;default:[];comment:Related tags" json:"tags"` // Related tags
+	IsDefault      bool           `gorm:"column:is_default;not null" json:"is_default"`
+	HasReply       bool           `gorm:"column:has_reply;not null" json:"has_reply"`
+	OpRejectReason *string        `gorm:"column:op_reject_reason;comment:Operator reject reason" json:"op_reject_reason"`     // Operator reject reason
+	OpRejectAt     *time.Time     `gorm:"column:op_reject_at;comment:Operator reject time" json:"op_reject_at"`               // Operator reject time
+	OpRejectBy     *int64         `gorm:"column:op_reject_by;comment:Operator reject user ID" json:"op_reject_by"`            // Operator reject user ID
+	OpNote         *string        `gorm:"column:op_note;comment:Operator note" json:"op_note"`                                // Operator note
+	Snapshot       string         `gorm:"column:snapshot;not null;default:{};comment:Snapshot of the review" json:"snapshot"` // Snapshot of the review
+	ExtJSON        string         `gorm:"column:ext_json;not null;default:{};comment:Extended information" json:"ext_json"`   // Extended information
+	CtrlJSON       string         `gorm:"column:ctrl_json;not null;default:{};comment:Control information" json:"ctrl_json"`  // Control information
+}
+
+// TableName Review's table name
+func (*Review) TableName() string {
+	return TableNameReview
+}
